tests/NormalTests/paczka1/fuzzy1/68280827.err
Error in line 3: jYNnAxdZesw A110 67,8
Error in line 4: kzwHH2FvJoC A110 56,8
Error in line 11: jYNnAxdZesw S369 56,3
Error in line 2: BCbI A54 20,0
Error in line 16: BCbI S369 804,9
Error in line 25: BCbI A110 48,1
Error in line 26: BCbI S369 16,8
Error in line 23: kzwHH2FvJoC A110 78,2
Error in line 30: mHCH2FyWSry S369 74,7
Error in line 32: mHCH2FyWSry A110 79,3
Error in line 29: kzwHH2FvJoC A54 34,0
Error in line 34: ThzRwEdP A110 95,2
